--- a/avaliacaopaciente.html
+++ b/avaliacaopaciente.html
@@ -7,75 +7,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atendimento de Ocorrências</title>
     <link rel="icon" type="image/png" href="image/logo_noar.png">
+    <link rel="stylesheet" href="css/avaliacaopaciente.css">
 </head>
 
 <body>
 
     <div class="container">
-        <form action="#" method="post">
+        <form action="#" method="post" class="form">
             <h2> Tipos de Ocorrência (Pré-Hospitalar)</h2>
-            <input type="checkbox" id="opcao1" name="opcao1" value="Opção 1">
-            <label for="opcao1">Causado Por Animais</label><br>
+            <div class="d1">
+                <input type="checkbox" id="opcao1" name="opcao1" value="Opção 1">
+                <label for="opcao1">Causado Por Animais</label><br>
 
-            <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
-            <label for="opcao2">Com Meio de Transporte</label><br>
+                <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
+                <label for="opcao2">Com Meio de Transporte</label><br>
 
-            <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
-            <label for="opcao3">Desmoronamento/Deslizamento</label><br>
+                <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
+                <label for="opcao3">Desmoronamento/Deslizamento</label><br>
 
-            <input type="checkbox" id="opcao4" name="opcao3" value="Opção 3">
-            <label for="opcao4">Emergência Médica</label><br>
+                <input type="checkbox" id="opcao4" name="opcao3" value="Opção 3">
+                <label for="opcao4">Emergência Médica</label><br>
 
-            <input type="checkbox" id="opcao5" name="opcao3" value="Opção 3">
-            <label for="opcao5">Queda de Altura 2M</label><br>
+                <input type="checkbox" id="opcao5" name="opcao3" value="Opção 3">
+                <label for="opcao5">Queda de Altura 2M</label><br>
 
-            <input type="checkbox" id="opcao6" name="opcao3" value="Opção 3">
-            <label for="opcao6">Tentativa de Suicídio</label><br>
+                <input type="checkbox" id="opcao6" name="opcao3" value="Opção 3">
+                <label for="opcao6">Tentativa de Suicídio</label><br>
 
-            <input type="checkbox" id="opcao7" name="opcao3" value="Opção 3">
-            <label for="opcao7">Queda Própria Altura</label><br>
+                <input type="checkbox" id="opcao7" name="opcao3" value="Opção 3">
+                <label for="opcao7">Queda Própria Altura</label><br>
+            </div>
 
-            <input type="checkbox" id="opcao8" name="opcao1" value="Opção 1">
-            <label for="opcao8">Afogamento</label><br>
+            <div class="d2">
+                <input type="checkbox" id="opcao8" name="opcao1" value="Opção 1">
+                <label for="opcao8">Afogamento</label><br>
 
-            <input type="checkbox" id="opcao9" name="opcao2" value="Opção 2">
-            <label for="opcao9">Agressão</label><br>
+                <input type="checkbox" id="opcao9" name="opcao2" value="Opção 2">
+                <label for="opcao9">Agressão</label><br>
 
-            <input type="checkbox" id="opcao10" name="opcao3" value="Opção 3">
-            <label for="opcao10">Atropelamento</label><br>
+                <input type="checkbox" id="opcao10" name="opcao3" value="Opção 3">
+                <label for="opcao10">Atropelamento</label><br>
 
-            <input type="checkbox" id="opcao11" name="opcao3" value="Opção 3">
-            <label for="opcao11">Choque Elétrico</label><br>
+                <input type="checkbox" id="opcao11" name="opcao3" value="Opção 3">
+                <label for="opcao11">Choque Elétrico</label><br>
 
-            <input type="checkbox" id="opcao12" name="opcao3" value="Opção 3">
-            <label for="opcao12">Desabamento</label><br>
+                <input type="checkbox" id="opcao12" name="opcao3" value="Opção 3">
+                <label for="opcao12">Desabamento</label><br>
 
-            <input type="checkbox" id="opcao13" name="opcao3" value="Opção 3">
-            <label for="opcao13">Doméstico</label><br>
+                <input type="checkbox" id="opcao13" name="opcao3" value="Opção 3">
+                <label for="opcao13">Doméstico</label><br>
 
-            <input type="checkbox" id="opcao14" name="opcao3" value="Opção 3">
-            <label for="opcao14">Esportivo</label><br>
+                <input type="checkbox" id="opcao14" name="opcao3" value="Opção 3">
+                <label for="opcao14">Esportivo</label><br>
+            </div>
 
-            <input type="checkbox" id="opcao15" name="opcao1" value="Opção 1">
-            <label for="opcao15">Intoxicação</label><br>
+            <div class="d3">
+                <input type="checkbox" id="opcao15" name="opcao1" value="Opção 1">
+                <label for="opcao15">Intoxicação</label><br>
 
-            <input type="checkbox" id="opcao16" name="opcao2" value="Opção 2">
-            <label for="opcao16">Queda Bicicleta</label><br>
+                <input type="checkbox" id="opcao16" name="opcao2" value="Opção 2">
+                <label for="opcao16">Queda Bicicleta</label><br>
 
-            <input type="checkbox" id="opcao17" name="opcao3" value="Opção 3">
-            <label for="opcao17">Queda Moto</label><br>
+                <input type="checkbox" id="opcao17" name="opcao3" value="Opção 3">
+                <label for="opcao17">Queda Moto</label><br>
 
-            <input type="checkbox" id="opcao18" name="opcao3" value="Opção 3">
-            <label for="opcao18">Queda Nível &lt;2M </label><br>
+                <input type="checkbox" id="opcao18" name="opcao3" value="Opção 3">
+                <label for="opcao18">Queda Nível &lt;2M </label><br>
 
-            <input type="checkbox" id="opcao19" name="opcao3" value="Opção 3">
-            <label for="opcao19">Trabalho</label><br>
+                <input type="checkbox" id="opcao19" name="opcao3" value="Opção 3">
+                <label for="opcao19">Trabalho</label><br>
 
-            <input type="checkbox" id="opcao20" name="opcao3" value="Opção 3">
-            <label for="opcao20">Transferência</label><br>
+                <input type="checkbox" id="opcao20" name="opcao3" value="Opção 3">
+                <label for="opcao20">Transferência</label><br>
 
-            <input type="checkbox" id="opcao21" name="opcao3" value="Opção 3">
-            <input type="text" for="opcao21"><br>
+                <input type="checkbox" id="opcao21" name="opcao3" value="Opção 3">
+                <input type="text" for="opcao21"><br>
+            </div>
 
             <input type="submit" value="Enviar">
         </form>
