--- a/dados.html
+++ b/dados.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,22 @@
     <link rel="icon" type="image/png" href="image/logo_noar.png">
     <link rel="stylesheet" href="dados.css">
 </head>
+
 <body>
     <div class="formulario">
-        <div class="valor-forms">
-            <form action="">
-                <div class="data" id="data">
-                <h2>Data:</h2>
-            </div>
-            </form>
+        <input type="date" id="date">
+        <div class="genero">
+            Sexo:
+            Masculino<input type="checkbox" id="genero"> Feminino<input type="checkbox" id="genero2">
+        </div>
+        <div class="hospital">
+            Nome do Hospital: <input type="text" id="local">
+        </div>
+        <div class="nome">
+            Nome: <input type="text" id="nome"> 
+        </div>
+        <div class="idade">
+            Idade: <input type="text" id="idade" >
         </div>
     </div>
 </body>
