--- a/avaliacaopaciente.html
+++ b/avaliacaopaciente.html
@@ -19,72 +19,137 @@
         <form action="#" method="post" class="form">
             <div class="separa">
                 <div class="d1">
-                    <input type="checkbox" id="opcao1" name="opcao1" value="Opção 1">
-                    <label for="opcao1">Causado Por Animais</label><br>
+                    <label for="opcao1" class="agrupamento">
+                        <input type="checkbox" id="opcao1" name="opcao1" value="Opção 1">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Causado Por Animais</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
-                    <label for="opcao2">Com Meio de Transporte</label><br>
+                    <label for="opcao2" class="agrupamento">
+                        <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Com Meio de Transporte</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
-                    <label for="opcao3">Desmoronamento/Deslizamento</label><br>
+                    <label for="opcao3" class="agrupamento">
+                        <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Desmoronamento/Deslizamento</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao4" name="opcao3" value="Opção 3">
-                    <label for="opcao4">Emergência Médica</label><br>
+                    <label for="opcao4" class="agrupamento">
+                        <input type="checkbox" id="opcao4" name="opcao4" value="Opção 4">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Emergência Médica</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao5" name="opcao3" value="Opção 3">
-                    <label for="opcao5">Queda de Altura 2M</label><br>
+                    <label for="opcao5" class="agrupamento">
+                        <input type="checkbox" id="opcao5" name="opcao5" value="Opção 5">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Queda de Altura 2M</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao6" name="opcao3" value="Opção 3">
-                    <label for="opcao6">Tentativa de Suicídio</label><br>
+                    <label for="opcao6" class="agrupamento">
+                        <input type="checkbox" id="opcao6" name="opcao6" value="Opção 6">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Tentativa de Suicídio</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao7" name="opcao3" value="Opção 3">
-                    <label for="opcao7">Queda Própria Altura</label><br>
+                    <label for="opcao7" class="agrupamento">
+                        <input type="checkbox" id="opcao7" name="opcao7" value="Opção 7">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Queda Própria Altura</div>
+                    </label><br>
                 </div>
 
                 <div class="d2">
-                    <input type="checkbox" id="opcao8" name="opcao1" value="Opção 1">
-                    <label for="opcao8">Afogamento</label><br>
+                    <label for="opcao8" class="agrupamento">
+                        <input type="checkbox" id="opcao8" name="opcao8" value="Opção 8">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Afogamento</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao9" name="opcao2" value="Opção 2">
-                    <label for="opcao9">Agressão</label><br>
+                    <label for="opcao9" class="agrupamento">
+                        <input type="checkbox" id="opcao9" name="opcao9" value="Opção 9">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Agressão</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao10" name="opcao3" value="Opção 3">
-                    <label for="opcao10">Atropelamento</label><br>
+                    <label for="opcao10" class="agrupamento">
+                        <input type="checkbox" id="opcao10" name="opcao10" value="Opção 10">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Atropelamento</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao11" name="opcao3" value="Opção 3">
-                    <label for="opcao11">Choque Elétrico</label><br>
+                    <label for="opcao11" class="agrupamento">
+                        <input type="checkbox" id="opcao11" name="opcao11" value="Opção 11">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Choque Elétrico</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao12" name="opcao3" value="Opção 3">
-                    <label for="opcao12">Desabamento</label><br>
+                    <label for="opcao12" class="agrupamento">
+                        <input type="checkbox" id="opcao12" name="opcao12" value="Opção 12">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Desabamento</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao13" name="opcao3" value="Opção 3">
-                    <label for="opcao13">Doméstico</label><br>
+                    <label for="opcao13" class="agrupamento">
+                        <input type="checkbox" id="opcao13" name="opcao13" value="Opção 13">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Doméstico</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao14" name="opcao3" value="Opção 3">
-                    <label for="opcao14">Esportivo</label><br>
+                    <label for="opcao14" class="agrupamento">
+                        <input type="checkbox" id="opcao14" name="opcao14" value="Opção 14">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Esportivo</div>
+                    </label><br>
                 </div>
 
                 <div class="d3">
-                    <input type="checkbox" id="opcao15" name="opcao1" value="Opção 1">
-                    <label for="opcao15">Intoxicação</label><br>
+                    <label for="opcao15" class="agrupamento">
+                        <input type="checkbox" id="opcao15" name="opcao15" value="Opção 15">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Intoxicação</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao16" name="opcao2" value="Opção 2">
-                    <label for="opcao16">Queda Bicicleta</label><br>
+                    <label for="opcao16" class="agrupamento">
+                        <input type="checkbox" id="opcao16" name="opcao16" value="Opção 16">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Queda Bicicleta</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao17" name="opcao3" value="Opção 3">
-                    <label for="opcao17">Queda Moto</label><br>
+                    <label for="opcao17" class="agrupamento">
+                        <input type="checkbox" id="opcao17" name="opcao17" value="Opção 17">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Queda Moto</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao18" name="opcao3" value="Opção 3">
-                    <label for="opcao18">Queda Nível &lt;2M </label><br>
+                    <label for="opcao18" class="agrupamento">
+                        <input type="checkbox" id="opcao18" name="opcao18" value="Opção 18">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Queda Nível &lt;2M</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao19" name="opcao3" value="Opção 3">
-                    <label for="opcao19">Trabalho</label><br>
+                    <label for="opcao19" class="agrupamento">
+                        <input type="checkbox" id="opcao19" name="opcao19" value="Opção 19">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Trabalho</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao20" name="opcao3" value="Opção 3">
-                    <label for="opcao20">Transferência</label><br>
+                    <label for="opcao20" class="agrupamento">
+                        <input type="checkbox" id="opcao20" name="opcao20" value="Opção 20">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Transferência</div>
+                    </label><br>
 
-                    <input type="checkbox" id="opcao21" name="opcao3" value="Opção 3">
-                    <input type="text" for="opcao21" placeholder="Outro"><br>
+                    <label for="opcao21" class="agrupamento">
+                        <input type="checkbox" id="opcao21" name="opcao21" value="Opção 21">
+                        <span class="checkmark"></span>
+                        <div class="escreve">
+                            <input type="text" placeholder="outro">
+                        </div>
+                    </label><br>
                 </div>
             </div>
             <br>
