--- a/avaliacaopaciente.html
+++ b/avaliacaopaciente.html
@@ -147,7 +147,7 @@
                         <input type="checkbox" id="opcao21" name="opcao21" value="Opção 21">
                         <span class="checkmark"></span>
                         <div class="escreve">
-                            <input type="text" placeholder="outro">
+                            <input type="text" placeholder="Outro">
                         </div>
                     </label><br>
                 </div>
