--- a/avaliacaopaciente.html
+++ b/avaliacaopaciente.html
@@ -13,9 +13,6 @@
 <body>
 
     <div class="container">
-        <div class="texto">
-            <h2> Tipos de Ocorrência (Pré-Hospitalar)</h2>
-        </div>
         <form action="#" method="post" class="form">
             <div class="separa">
                 <div class="d1">
@@ -147,9 +144,9 @@
                         <input type="checkbox" id="opcao21" name="opcao21" value="Opção 21">
                         <span class="checkmark"></span>
                         <div class="escreve">
-                            <input type="text" placeholder="Outro">
+                            <input type="text" placeholder="Outro...">
                         </div>
-                    </label><br>
+                    </label>
                 </div>
             </div>
             <br>
