--- a/vitimaera.html
+++ b/vitimaera.html
@@ -7,15 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atendimento de Ocorrências</title>
     <link rel="icon" type="image/png" href="image/logo_noar.png">
-    <link rel="stylesheet" href="css/vitimaera.css">
+    <link rel="stylesheet" href="css/avaliacaopaciente.css">
 </head>
 
 <body>
 
     <div class="container">
-        <div class="texto">
-            <h2> Vítima Era</h2>
-        </div>
         <form action="#" method="post" class="form">
             <div class="separa">
                 <div class="d1">
@@ -40,7 +37,7 @@
                     <label for="opcao4" class="agrupamento">
                         <input type="checkbox" id="opcao4" name="opcao4" value="Opção 4">
                         <span class="checkmark"></span>
-                        <div class="texto1">Pass. Ban Frente</div>
+                        <div class="texto1">Pas. Banco Frente</div>
                     </label><br>
 
                     <label for="opcao5" class="agrupamento">
@@ -72,7 +69,7 @@
                     <label for="opcao9" class="agrupamento">
                         <input type="checkbox" id="opcao9" name="opcao9" value="Opção 9">
                         <span class="checkmark"></span>
-                        <div class="texto1">Pas. Bco. Trás</div>
+                        <div class="texto1">Pas. Banco Trás</div>
                     </label><br>
 
                     <label for="opcao10" class="agrupamento">
