--- a/principal.html
+++ b/principal.html
@@ -7,12 +7,14 @@
     <title>Bombeiros</title>
     <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="icon" type="image/png" href="image/logobomb.png">
+    <script src="https://kit.fontawesome.com/f87260a7c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
     <div class="navbar">
         <div class="port">
-            <div class="logo"><img src="img/logobomb.png"><img src="img/medicina.png"></div>
+            <div class="logo"><img src="image/logobomb.png"><img src="image/medicina.png"></div>
             <div class="titulo">
             <h2>Bombeiros Voluntários</h2>
             <h4>Assoc. de Serviços Sociais Voluntários de Guaramirim</h4>
@@ -46,22 +48,45 @@
 
 
     <div class="abas" onclick="abrir();" id="aba1">
-        <h3>Tipo de Ocorrência (Pré Hospitalar)</h3>
-        <br> <br>
-
-        <img src="img/neymar.jpg">
+        <div class="abacima"><h3>Tipo de Ocorrência (Pré Hospitalar)</h3><i class="fa-solid fa-chevron-down" id="seta"></i></div>
+        <iframe src="avaliacaopaciente.html" id="iframe1" width="100%" height="100%"></iframe>
     </div>
-    <div class="abas" onclick="abrir2();" id="aba2">
-        <h3>Tipo de Ocorrência (Pré Hospitalar)</h3>
-        <br> <br>
-
-        <img src="img/neymar.jpg">
+    <div class="abasmen" onclick="abrir2();" id="aba2">
+        <div class="abacima"><h3>Vítima Era:</h3><i class="fa-solid fa-chevron-down" id="seta2"></i></div>
+        <iframe src="vitimaera.html" id="iframe2" width="100%" height="100%"></iframe>
     </div>
 </body>
 
 <script>
+    var iframe1 = document.getElementById('iframe1');
+    var aba1 = document.getElementById('aba1');
+    var iframe2 = document.getElementById('iframe2');
+    var aba2 = document.getElementById('aba2');
+
     function abrir(){
-        document.getElementById('aba1').style.height = "500px"
+        if(iframe1.style.display == "block" && aba1.style.height == "650px"){
+            iframe1.style.display = "none";
+            aba1.style.height = "auto";
+            document.getElementById('seta').style.transform = 'rotate(360deg)'
+
+        }else{
+            iframe1.style.display = "block";
+            aba1.style.height = "650px";
+            document.getElementById('seta').style.transform = 'rotate(180deg)'
+        }    
+    } 
+
+    function abrir2(){
+        if(iframe2.style.display == "block" && aba2.style.height == "650px"){
+            iframe2.style.display = "none";
+            aba2.style.height = "auto";
+            document.getElementById('seta2').style.transform = 'rotate(360deg)'
+
+        }else{
+            iframe2.style.display = "block";
+            aba2.style.height = "650px";
+            document.getElementById('seta2').style.transform = 'rotate(180deg)'
+        }    
     } 
 </script>
 </html>
