--- a/dados.html
+++ b/dados.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,47 @@
     <title>Dados Pessoais</title>
     <link rel="icon" type="image/png" href="image/logo_noar.png">
     <link rel="stylesheet" href="dados.css">
+    <link
+     rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"
+   />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 </head>
+
 <body>
     <div class="formulario">
-        <div class="valor-forms">
-            <form action="">
-                <div class="data" id="data">
-                <h2>Data:</h2>
-            </div>
-            </form>
+        <input type="date" id="date">
+        <div class="genero">
+            Sexo:
+            Masculino<input type="checkbox" id="genero"> Feminino<input type="checkbox" id="genero2">
         </div>
+        <div class="hospital">
+            Nome do Hospital: <input type="text" id="local">
+        </div>
+        <div class="nome">
+            Nome: <input type="text" id="nome"> 
+        </div>
+        <div class="idade">
+            Idade: <input type="text" id="idade" >
+        </div>
+        <div class="identidade">
+            RG/CPF Paciente: <input type="text" id="identidade">
+        </div>
+        
+        <div class="telefone">
+            <form id="telefone" onsubmit="process(event)">
+              Telefone:
+              <input id="phone" type="tel" name="phone" />
+            </form>
+           </div>
+        
     </div>
 </body>
-
+<script>
+    const phoneInputField = document.querySelector("#phone");
+    const phoneInput = window.intlTelInput(phoneInputField, {
+      utilsScript:
+        "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
+    });
+  </script>
 </html>
