--- a/vitimaera.html
+++ b/vitimaera.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atendimento de Ocorrências</title>
     <link rel="icon" type="image/png" href="image/logo_noar.png">
-    <link rel="stylesheet" href="css/avaliacaopaciente.css">
+    <link rel="stylesheet" href="css/janelas.css">
 </head>
 
 <body>
