--- a/problemas.html
+++ b/problemas.html
@@ -81,15 +81,11 @@
                         </div>
                     </label><br>
 
-                    <label for="opcao3" class="agrupamento">
-                        <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
+                    <label for="opcao6" class="agrupamento">
+                        <input type="checkbox" id="opcao6" name="opcao6" value="Opção 6">
                         <span class="checkmark"></span>
                         <div class="arruma2">
-                            <select name="opcao3" id="opcao3">
-                                <option value="Diabetes">Diabetes</option>
-                                <option value="Hiperglicemia">Hiperglicemia</option>
-                                <option value="Hipoglicemia">Hipoglicemia</option>
-                            </select>
+                            <input type="text" placeholder="Outro...">
                         </div>
                     </label><br>
                 </div>
