--- a/principal.html
+++ b/principal.html
@@ -64,7 +64,7 @@
     <div class="formes">
     <div class="abas">
         <h3>Tópicos:</h3>
-        <div class="abacima" onclick="abrir();" id="aba1"><h3>Tipo de Ocorrência</h3><i class="fa-solid fa-chevron-right" id="seta"></i></div>
+        <div class="abacima active" onclick="abrir();" id="aba1"><h3>Tipo de Ocorrência</h3><i class="fa-solid fa-chevron-right" id="seta"></i></div>
         <div class="abacima" onclick="abrir2();" id="aba2"><h3>Vítima Era</h3><i class="fa-solid fa-chevron-right" id="seta2"></i></div>
         <div class="abacima" onclick="abrir3();" id="aba3"><h3>Problemas</h3><i class="fa-solid fa-chevron-right" id="seta3"></i></div>
     </div>
