--- a/avaliacaopaciente.html
+++ b/avaliacaopaciente.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atendimento de Ocorrências</title>
     <link rel="icon" type="image/png" href="image/logo_noar.png">
-    <link rel="stylesheet" href="css/avaliacaopaciente.css">
+    <link rel="stylesheet" href="css/janelas.css">
 </head>
 
 <body>
@@ -141,9 +141,7 @@
                     </label><br>
 
                     <label for="opcao21" class="agrupamento">
-                        <input type="checkbox" id="opcao21" name="opcao21" value="Opção 21">
-                        <span class="checkmark"></span>
-                        <div class="escreve">
+                        <div class="outro">
                             <input type="text" placeholder="Outro...">
                         </div>
                     </label>
